--- a/py_server/view_data.ipynb
+++ b/py_server/view_data.ipynb
@@ -34,6 +34,8 @@
     "\n",
     "data = np.fromfile(data_file, np.uint16)\n",
     "\n",
+    "T = 0.017\n",
+    "\n",
     "print(len(data), np.max(data),np.min(data))\n",
     "\n",
     "\n"
@@ -48,12 +50,39 @@
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
     "\n",
-    "x = [0.016 * i for i in range(len(data))]\n",
+    "x = [T * i for i in range(len(data))]\n",
     "\n",
     "fig = px.line(x=x, y=data)\n",
     "#fig = px.scatter(df_disp, x=\"timestamp\", y=\"value\", color=\"name\")\n",
     "fig.show()"
    ]
+  },
+  {
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.fftpack\n",
+    "\n",
+    "# Number of samplepoints\n",
+    "N = 1024\n",
+    "\n",
+    "\n",
+    "# sample spacing\n",
+    "x = x[:N]\n",
+    "y = data[:N]\n",
+    "yf = scipy.fftpack.fft(y)\n",
+    "xf = np.linspace(0.0, 1.0/(2.0*T), int(N/2))\n",
+    "\n",
+    "yf[0] = 0\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(xf, 2.0/N * np.abs(yf[:N//2]))\n",
+    "plt.show()"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "code",
@@ -66,29 +95,25 @@
     "import scipy.fftpack\n",
     "\n",
     "# Number of samplepoints\n",
-    "N = 600\n",
-    "# sample spacing\n",
-    "T = 0.016\n",
-    "#x = np.linspace(0.0, N*T, N)\n",
-    "#y = np.sin(50.0 * 2.0*np.pi*x) + 0.5*np.sin(80.0 * 2.0*np.pi*x)\n",
-    "x = x[0:N-1]\n",
-    "y = data[0:N-1]\n",
-    "yf = scipy.fftpack.fft(y)\n",
-    "xf = np.linspace(0.0, 1.0/(2.0*T), int(N/2))\n",
+    "N = 1024\n",
+    "freq = 100\n",
+    "sample_freqs = [400, 300, 100, 31, 21]\n",
     "\n",
-    "yf[0] = 0\n",
+    "for sample_freq in sample_freqs:\n",
     "\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(xf, 2.0/N * np.abs(yf[:N//2]))\n",
-    "plt.show()"
+    "    # sample spacing\n",
+    "    T = 1/sample_freq\n",
+    "    x = np.linspace(0.0, N*T, N)\n",
+    "    y = np.sin(freq * 2.0*np.pi*x)\n",
+    "    yf = scipy.fftpack.fft(y)\n",
+    "    xf = np.linspace(0.0, 1.0/(2.0*T), int(N/2))\n",
+    "\n",
+    "    yf[0] = 0\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(xf, 2.0/N * np.abs(yf[:N//2]))\n",
+    "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
