Added another analysis

--- a/py_server/view_data.ipynb
+++ b/py_server/view_data.ipynb
@@ -31,6 +31,7 @@
     "import numpy as np\n",
     "\n",
     "data_file = \"C:/Users/jdiamond/Documents/PlatformIO/Projects/light_mqtt/data.bin\"\n",
+    "#data_file = \"C:/Users/jdiamond/Documents/PlatformIO/Projects/light_mqtt/kitchen_data.bin\"\n",
     "\n",
     "data = np.fromfile(data_file, np.uint16)\n",
     "\n",
@@ -53,6 +54,47 @@
     "x = [T * i for i in range(len(data))]\n",
     "\n",
     "fig = px.line(x=x, y=data)\n",
+    "#fig = px.scatter(df_disp, x=\"timestamp\", y=\"value\", color=\"name\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "import plotly.express as px\n",
+    "from scipy.ndimage.filters import uniform_filter1d\n",
+    "\n",
+    "x = [T * i for i in range(len(data))]\n",
+    "y = uniform_filter1d(data, size=int(2/T))\n",
+    "\n",
+    "\n",
+    "fig = px.line(x=x, y=y)\n",
+    "#fig = px.scatter(df_disp, x=\"timestamp\", y=\"value\", color=\"name\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "import plotly.express as px\n",
+    "from scipy.ndimage.filters import uniform_filter1d\n",
+    "\n",
+    "window = 30\n",
+    "\n",
+    "x = [T * i / 60 for i in range(len(data))]\n",
+    "y = []\n",
+    "for i in range(window,len(x)):\n",
+    "    y.append(min(data[i-window:i]))\n",
+    "\n",
+    "fig = px.line(x=x[window:], y=y)\n",
     "#fig = px.scatter(df_disp, x=\"timestamp\", y=\"value\", color=\"name\")\n",
     "fig.show()"
    ]
